# calc-hs

./: LICENSE  calc.cabal
