name:                calc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/biggs/calc-hs
license:             MIT
license-file:        LICENSE
author:              Felix Biggs
maintainer:          contact@felixbiggs.com
copyright:           2019 Felix Biggs
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable calc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
